--- a/auth-non-gms/src/main/AndroidManifest.xml
+++ b/auth-non-gms/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <application>
         <activity
-            android:name="com.github.openmobilehub.auth.nongms.presentation.redirect.RedirectActivity"
+            android:name="com.openmobilehub.auth.nongms.presentation.redirect.RedirectActivity"
             android:exported="true"
             android:launchMode="singleTask">
             <intent-filter>
