--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -19,6 +19,8 @@ jobs:
           distribution: 'temurin'
           cache: gradle
 
+      - name: Update local properties for secrets
+        run: echo MAPS_API_KEY="MAPS_API_KEY_VALUE" > ./local.properties
       - name: Assemble app debug APK
         run: bash ./gradlew assembleDebug
 
