--- a/.github/workflows/publish_auth_api.yml
+++ b/.github/workflows/publish_auth_api.yml
@@ -4,6 +4,7 @@ on:
   release:
     # We'll run this workflow when a new GitHub release is created
     types: [ released ]
+  workflow_dispatch:
 
 jobs:
   publish:
@@ -17,6 +18,9 @@ jobs:
         with:
           distribution: adopt
           java-version: 11
+
+      - name: Update local properties for secrets
+        run: echo MAPS_API_KEY="MAPS_API_KEY_VALUE" > ./local.properties
 
         # Builds the release artifacts of the library
       - name: Release build
