--- a/.github/workflows/publish_auth_api_ngms.yml
+++ b/.github/workflows/publish_auth_api_ngms.yml
@@ -1,9 +1,12 @@
 name: Publish Auth API non GMS Implementation
 
 on:
-  release:
-    # We'll run this workflow when a new GitHub release is created
-    types: [ released ]
+  workflow_run:
+    # We'll run this workflow when the Publish Auth API is completed
+    workflows: [ Publish Auth API ]
+    types:
+      - completed
+  workflow_dispatch:
 
 jobs:
   publish:
@@ -17,6 +20,9 @@ jobs:
         with:
           distribution: adopt
           java-version: 11
+
+      - name: Update local properties for secrets
+        run: echo MAPS_API_KEY="MAPS_API_KEY_VALUE" > ./local.properties
 
         # Builds the release artifacts of the library
       - name: Release build
