--- a/.github/workflows/publish_auth_api.yml
+++ b/.github/workflows/publish_auth_api.yml
@@ -20,7 +20,7 @@ jobs:
           java-version: 11
 
       - name: Update local properties for secrets
-        run: echo MAPS_API_KEY="MAPS_API_KEY_VALUE" > ./local.properties
+        run: echo CLIENT_ID="CLIENT_ID_VALUE" > ./local.properties
 
         # Builds the release artifacts of the library
       - name: Release build
