Decouple mobile-web submodule
For other OAuth2 providers to extend easily, in addition to just support Google Accounts.

--- a/auth-api-non-gms/src/main/AndroidManifest.xml
+++ b/auth-api-non-gms/src/main/AndroidManifest.xml
@@ -31,8 +31,9 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:path="/oauth2redirect"
-                    android:scheme="${applicationId}" />
+                    android:pathPrefix="/redirect"
+                    android:host="auth.oauth2.openmobilehub.org"
+                    android:scheme="https" />
             </intent-filter>
         </activity>
     </application>
